--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "pnpm run clean && tsc",
+    "lint": "eslint src --ext .js,.ts --cache --fix",
     "clean": "rm -rf dist"
   },
   "publishConfig": {
     "access": "public"
-},
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.7.4"
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "eslint": "^8.0.1",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "typescript": "*"
   }
 }
