--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "tsc --watch",
     "build": "pnpm run clean && tsc",
     "lint": "eslint src --ext .js,.ts --cache --fix",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "prepare": "husky install"
   },
   "publishConfig": {
     "access": "public"
@@ -26,6 +27,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
+    "husky": "^8.0.1",
     "prettier": "^2.7.1",
     "typescript": "*"
   }
