--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "description": "",
-  "main": "dest/index.js",
-  "types": "dest/types/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "dev": "tsc --watch",
     "build": "pnpm run clean && tsc",
-    "lint": "eslint src --ext .js,.ts --cache --fix",
+    "lint": "eslint src __tests__ --ext .js,.ts --cache --fix",
     "clean": "rm -rf dist",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "publishConfig": {
     "access": "public"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@types/jest": "^28.1.7",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.5.0",
@@ -30,7 +32,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
     "typescript": "*"
   }
 }
